Refs on Christopher Marlowe.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -920,6 +920,31 @@
 
     <h4>Atheist, Playwright, Poet, Spy</h4>
     <p>About <a href="https://en.wikipedia.org/wiki/Christopher_Marlowe">Christopher Marlowe (1564–1593)</a>.</p>
+    <ul>
+      <li>Riggs, David:
+        <i class="booktitle">The World of Christopher Marlowe</i>. Faber &amp; Faber, 2005. (432 pages)
+        <a href="https://www.faber.co.uk/9780571221608-the-world-of-christopher-marlowe.html"><abbr>ISBN</abbr> 9780571221608</a>.
+      </li>
+      <li>Honan, Park:
+        <i class="booktitle">Christopher Marlowe: Poet &amp; Spy</i>. Oxford University Press, 2007 [2005].
+        <a href="https://global.oup.com/academic/product/christopher-marlowe-9780199232697"><abbr>ISBN</abbr> 9780199232697</a>.
+      </li>
+      <li>Nicholl, Charles:
+        <i class="booktitle">The Reckoning: The Murder of Christopher Marlowe</i>. Vintage (Penguin), 2002. (608 pages)
+        <a href="https://www.penguin.co.uk/books/1035262/the-reckoning/"><abbr>ISBN</abbr> 9780099437475</a>.
+      </li>
+      <li>Cheney, Patrick:
+        <i class="booktitle">The Cambridge Companion to Christopher Marlowe</i>. Cambridge Companions to Literature.
+        Cambridge University Press, 2004.
+        <a href="http://www.cambridge.org/us/academic/subjects/literature/renaissance-and-early-modern-literature/cambridge-companion-christopher-marlowe?format=PB"><abbr>ISBN</abbr> 9780521527347</a>.
+      </li>
+      <!-- 
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
+    </ul>
 
     <h4>Shakespeare and the Pirates</h4>
     <p>In other words: Shakespeare's plays: from manuscript to stage to print.</p>
@@ -939,6 +964,11 @@
         <i class="booktitle">Shakespeare's First Folio: Four Centuries of an Iconic Book</i>.
         Oxford University Press, 2016. (400 pages).
         <a href="https://global.oup.com/academic/product/shakespeares-first-folio-9780198754367"><abbr>ISBN</abbr> 9780198754367</a>.
+      </li>
+      <li>Smith, Emma:
+        <i class="booktitle">The Cambridge Companion to Shakespeare's First Folio</i>. Cambridge Companions to Literature.
+        Cambridge University Press, 2016. 
+        <a href="http://www.cambridge.org/us/academic/subjects/literature/renaissance-and-early-modern-literature/cambridge-companion-shakespeares-first-folio?format=PB"><abbr>ISBN</abbr> 9781107491687</a>.
       </li>
       <li>West, Anthony James:
         <i class="booktitle">The Shakespeare First Folio: The History of the Book. Volume I: An Account of the First Folio Based on its Sales and Prices 1623-2000</i>.
@@ -1634,6 +1664,9 @@
       * F. O. Matthiessen: American Renaissance: Art and Expression in the Age of Emerson and Whitman. Oxford UP, 1941, 1968. ISBN: 9780195007596: https://global.oup.com/academic/product/american-renaissance-9780195007596?cc=de&lang=en& 
       * https://en.wikipedia.org/wiki/F._O._Matthiessen 
       * Dartmouth on edX: The American Renaissance: Literature of the 19th Century [2015]: https://www.youtube.com/watch?v=z68I2QF2HZ8 
+
+      Cicero:
+      * Catherine Steel: The Cambridge Companion to Cicero. Cambridge University Press, 2013. ISBN 9780521729802. http://www.cambridge.org/us/academic/subjects/classical-studies/classical-literature/cambridge-companion-cicero?format=PB 
     -->
   </main>
 
