Aslan: No god but God (2012).

--- a/lijst.html
+++ b/lijst.html
@@ -255,6 +255,10 @@
       <abbr>MIT</abbr> Press, 2006.
       <a href="https://mitpress.mit.edu/books/memory-practices-sciences"><abbr>ISBN</abbr> 9780262524896</a>.
     </li>
+    <li>Aslan, Reza: <i class="booktitle">No god but God: The Origins and Evolution of Islam</i>. 
+      Random House, 2012.
+      <a href="http://www.penguinrandomhouse.com/books/203718/no-god-but-god-the-origins-and-evolution-of-islam-by-reza-aslan/"><abbr>ISBN</abbr> 9780385739764</a>.
+    </li>
     <li>Abraham, Tara H.: <i class="booktitle">Rebel Genius: Warren S. McCulloch's Transdisciplinary Life in Science</i>.
       <abbr>MIT</abbr>, 2016.
       <a href="https://mitpress.mit.edu/books/rebel-genius"><abbr>ISBN</abbr> 9780262035095</a>.
