--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -293,6 +293,38 @@
     </ul>
     <!-- @@search ResearchGate https://www.researchgate.net/search.Search.html?query=Matteo%20Ricci%20language&type=publication -->
 
+    <h4>Tang Zhen (1630–1704)</h4>
+    <ul>
+      <li lang="fr">
+        <a href="https://fr.wikipedia.org/wiki/Tang_Zhen" hreflang="fr">Tang Zhen</a> (Wikipédia).
+      </li>
+      <li lang="fr">Tang Zhen: 
+        <i class="booktitle">Écrits d'un sage encore inconnu</i>. 
+        Trad. du chinois par Jacques Gernet. Introduction et notes de Jacques Gernet. 
+        Collection Connaissance de l'Orient (n° 73), Série chinoise. Gallimard, 1992. (360 p.) 
+        <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Connaissance-de-l-Orient/chinoise/Ecrits-d-un-sage-encore-inconnu"><abbr>ISBN</abbr> 2070724409</a>.
+        <blockquote><p>Tang Zhen (1630-1704) est l'un des philosophes et écrivains éminents du XVIIe siècle chinois. 
+          Sa jeunesse coïncida avec une des périodes les plus sombres et les plus dramatiques de l'histoire chinoise&nbsp;: 
+          l'effondrement de la dynastie Ming et la venue au pouvoir des Mandchous. 
+          Après une brève carrière officielle (il est sous-préfet au Shanxi en 1671), 
+          il redevient simple particulier et vit jusqu'à sa mort dans la misère&nbsp;; 
+          il n'entretient de contacts qu'avec de rares savants de l'époque. 
+          En revanche, dans son isolement, il consacre trente ans à la rédaction d'un seul grand ouvrage, 
+          le Qianshu ou Écrits d'un sage encore inconnu, qui comprend deux groupes d'essais&nbsp;: 
+          sur la sagesse, et sur la mise en ordre du monde. 
+          Il y rassemble et y condense, dans un style remarquable, les pensées, jugements et réflexions 
+          de toute une vie axée sur le perfectionnement moral, l'aspiration à la vérité et à la sérénité. (…)
+        </p></blockquote>
+      </li>
+      <li lang="fr">Tang Zhen: 
+        <i class="booktitle">Des moyens de la sagesse et autres textes</i>.
+        Trad. du chinois par Jacques Gernet. Annotations du traducteur. 
+        Textes extraits d’<i class="booktitle">Écrits d’un sage encore inconnu</i>. 
+        Collection Folio 2 € (n° 5839), Série Sagesses. Gallimard. (128 p.) 
+        <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-2/Sagesses/Des-moyens-de-la-sagesse-et-autres-textes"><abbr>ISBN</abbr> 9782070458882</a>.
+      </li>
+    </ul>
+
     <h4>The Kangxi Emperor</h4>
     <p>The <a href="https://en.wikipedia.org/wiki/Kangxi_Emperor">Kangxi Emperor's</a> reign (1661 - 1772, 61 years)
       was the longest in Chinese history. The Kangxi Emperor is considered one of China's greatest emperors.
