Golding's translation of Ovid's Metamorphoses.

--- a/lijst.html
+++ b/lijst.html
@@ -259,6 +259,10 @@
       Random House, 2012.
       <a href="http://www.penguinrandomhouse.com/books/203718/no-god-but-god-the-origins-and-evolution-of-islam-by-reza-aslan/"><abbr>ISBN</abbr> 9780385739764</a>.
     </li>
+    <li>Ovid: <i class="booktitle">Metamorphoses</i>. Translated by Arthur Golding. Edited by Madeleine Forey. Penguin Classics. 
+      Penguin, 2002. (576 pages)
+      <a href="https://www.penguin.co.uk/books/33717/the-metamorphoses/9780140422306/"><abbr>ISBN</abbr> 978-0140422306</a>.
+    </li>
     <li>Abraham, Tara H.: <i class="booktitle">Rebel Genius: Warren S. McCulloch's Transdisciplinary Life in Science</i>.
       <abbr>MIT</abbr>, 2016.
       <a href="https://mitpress.mit.edu/books/rebel-genius"><abbr>ISBN</abbr> 9780262035095</a>.
