--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1027,6 +1027,23 @@
       -->
     </ul>
 
+    <h4>Stylometry</h4>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Stylometry">Stylometry</a> on Wikipedia.
+      </li>
+      <li>Craig, Hugh; Greatley-Hirsch, Brett: <i class="booktitle">Style, Computers, and Early Modern Drama: Beyond Authorship</i>.
+        Cambridge University Press, August 2017.
+        <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/style-computers-and-early-modern-drama-beyond-authorship?format=HB"><abbr>ISBN</abbr> 9781107191013</a>.
+      </li>
+      <li>Craig, Hugh; Kinney, Arthur F. (editors): <i class="booktitle">Shakespeare, Computers, and the Mystery of Authorship</i>.
+        Cambridge University Press, 2012.
+        <a href="http://www.cambridge.org/de/academic/subjects/literature/english-literature-general-interest/shakespeare-computers-and-mystery-authorship?format=PB"><abbr>ISBN</abbr> 9781107407084</a>.
+      </li>
+      <li>Slater, Eliot: <i class="booktitle">The Problem of The Reign of King Edward III: A Statistical Approach</i>. 
+        New Cambridge Shakespeare Studies and Supplementary Texts. Cambridge University Press, 2009.
+        <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/problem-reign-king-edward-iii-statistical-approach?format=PB"><abbr>ISBN</abbr> 9780521123488</a>.
+      </li>
+    </ul>
 
     <h4>The Scottish Enlightenment</h4>
     <p>The Enlightenment is strongly associated with French thinkers such as 
