--- a/lijst.html
+++ b/lijst.html
@@ -267,6 +267,27 @@
       <abbr>MIT</abbr>, 2016.
       <a href="https://mitpress.mit.edu/books/rebel-genius"><abbr>ISBN</abbr> 9780262035095</a>.
     </li>
+    <li>Salzman, Paul (editor): <i class="booktitle">An Anthology of Elizabethan Prose Fiction</i>. 
+      Oxford University Press, 2008. (464 pages) 
+      <a href="https://global.oup.com/academic/product/an-anthology-of-elizabethan-prose-fiction-9780199540570"><abbr>ISBN</abbr> 9780199540570</a>.
+      (Contains five works: George Gascoigne's <i class="booktitle">The Adventures of Master F. J</i>; 
+      John Lyly's <i class="booktitle">Euphues: The Anatomy of Wit</i>; 
+      Robert Greene's <i class="booktitle">Pandosto. The Triumph of Time</i>; 
+      Thomas Nashe's <i class="booktitle">The Unfortunate Traveller</i> and 
+      Thomas Deloney's <i class="booktitle">Jack of Newbury</i>.)
+    </li>
+    <li>Bruce, Susan (editor): <i class="booktitle">Three Early Modern Utopias. Thomas More: Utopia / Francis Bacon: New Atlantis / Henry Neville: The Isle of Pines</i>.
+      Oxford University Press, 2008. (320 pages)
+      <a href="https://global.oup.com/academic/product/three-early-modern-utopias-9780199537990"><abbr>ISBN</abbr> 9780199537990</a>.
+    </li>
+    <li>Salzman, Paul (editor): <i class="booktitle">Early Modern Women's Writing: An Anthology 1560-1700</i>. 
+      Oxford University Press, 2008. (496 pages)
+      <a href="https://global.oup.com/academic/product/early-modern-womens-writing-9780199549672"><abbr>ISBN</abbr> 9780199549672</a>.
+    </li>
+    <li>Foxe, John; King, John N. (editor): <i class="booktitle">Foxe's Book of Martyrs: Select Narratives</i>. 
+      Oxford University Press, 2009. (400 pages)
+      <a href="https://global.oup.com/academic/product/foxes-book-of-martyrs-9780199236848"><abbr>ISBN</abbr> 9780199236848</a>.
+    </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
