Elizabeth I & Ottoman Empire.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -939,6 +939,12 @@
 
     <h4>Queen Elizabeth I and the Ottoman Empire</h4>
     <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Abd_el-Ouahed_ben_Messaoud">Abd el-Ouahed ben Messaoud</a> 
+        (his arrival in London may have influenced the play
+        <a href="https://en.wikipedia.org/wiki/Lust%27s_Dominion">Lust's Dominion</a>),
+        <a href="https://en.wikipedia.org/wiki/Anglo-Moroccan_alliance">Anglo-Moroccan alliance</a>.
+      </li>
       <li>Brotton, Jerry: 
         <i class="booktitle">The Sultan and the Queen: The Untold Story of Queen Elizabeth and Islam</i>.
         Viking (Penguin Random House), 2016. 
@@ -1026,6 +1032,7 @@
         * Editing, Performance, Texts: New Practices in Medieval and Early Modern English Drama. Palgrave Macmillan, 2004. https://www.amazon.de/Editing-Performance-Texts-Practices-Medieval/dp/1349457639/ 
       -->
     </ul>
+    <!-- John Chamberlain: famous letter writer: https://en.wikipedia.org/wiki/John_Chamberlain_%28letter_writer%29 -->
 
     <h4>Stylometry</h4>
     <ul>
