Pollard: Shakespeare & Piratees.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -984,10 +984,16 @@
       -->
     </ul>
 
+    <!-- Cf. "Shakespeare in Love": Romeo and Ethel, the pirate's daughter ;-) -->
     <h4>Shakespeare and the Pirates</h4>
     <p>In other words: Shakespeare's plays: from manuscript to stage to print.</p>
     <ul>
       <li>Wikipedia: First Folio, False Folio, Bad Quarto (usually a pirated edition), etcetera.
+      </li>
+      <li>Pollard, Alfred William:
+        <i class="booktitle">Shakespeare's Fight With the Pirates and the Problems of the Transmission of His Text</i>. 
+        London: Alexander Moring, 1917. 
+        (<a href="https://archive.org/details/shakespearesfigh00polluoft">Scanned version on Archive.org</a>)
       </li>
       <li>Royal Shakespeare Company:
         <a href="https://www.youtube.com/playlist?list=PLEB3C48747472A268">The First Folio</a>
