More English Renaissance literature.

--- a/lijst.html
+++ b/lijst.html
@@ -267,6 +267,14 @@
       <abbr>MIT</abbr>, 2016.
       <a href="https://mitpress.mit.edu/books/rebel-genius"><abbr>ISBN</abbr> 9780262035095</a>.
     </li>
+    <li>Craig, Hugh; Kinney, Arthur F. (editors): <i class="booktitle">Shakespeare, Computers, and the Mystery of Authorship</i>.
+      Cambridge University Press, 2012.
+      <a href="http://www.cambridge.org/de/academic/subjects/literature/english-literature-general-interest/shakespeare-computers-and-mystery-authorship?format=PB"><abbr>ISBN</abbr> 9781107407084</a>.
+    </li>
+    <li>Slater, Eliot: <i class="booktitle">The Problem of The Reign of King Edward III: A Statistical Approach</i>. 
+      New Cambridge Shakespeare Studies and Supplementary Texts. Cambridge University Press, 2009.
+      <a href="http://www.cambridge.org/de/academic/subjects/literature/renaissance-and-early-modern-literature/problem-reign-king-edward-iii-statistical-approach?format=PB"><abbr>ISBN</abbr> 9780521123488</a>.
+    </li>
     <li>Salzman, Paul (editor): <i class="booktitle">An Anthology of Elizabethan Prose Fiction</i>. 
       Oxford University Press, 2008. (464 pages) 
       <a href="https://global.oup.com/academic/product/an-anthology-of-elizabethan-prose-fiction-9780199540570"><abbr>ISBN</abbr> 9780199540570</a>.
@@ -275,6 +283,16 @@
       Robert Greene's <i class="booktitle">Pandosto. The Triumph of Time</i>; 
       Thomas Nashe's <i class="booktitle">The Unfortunate Traveller</i> and 
       Thomas Deloney's <i class="booktitle">Jack of Newbury</i>.)
+    </li>
+    <li>Kermode, Lloyd (editor): <i class="booktitle">Three Renaissance usury plays: The Three Ladies of London, Englishmen for My Money, The Hog Hath Lost His Pearl</i>.
+      Manchester University Press, 2014. (396 pages)
+      <a href="http://www.manchesteruniversitypress.co.uk/9780719072635/"><abbr>ISBN</abbr> 978-0-7190-7263-5</a>.
+      (Contains 
+      <a class="booktitle" href="https://en.wikipedia.org/wiki/The_Three_Ladies_of_London">The Three Ladies of London</a> (published 1584) by
+      <a href="https://en.wikipedia.org/wiki/Robert_Wilson_%28dramatist%29">Robert Wilson</a>,
+      <a class="booktitle" href="https://en.wikipedia.org/wiki/Englishmen_for_My_Money">Englishmen for My Money</a> (c. 1598) by
+      <a href="https://en.wikipedia.org/wiki/William_Haughton">William Haughton</a>, and 
+      <i class="booktitle">The Hog Hath Lost His Pearl</i> (1614) by Robert Tailor.
     </li>
     <li>Bruce, Susan (editor): <i class="booktitle">Three Early Modern Utopias. Thomas More: Utopia / Francis Bacon: New Atlantis / Henry Neville: The Isle of Pines</i>.
       Oxford University Press, 2008. (320 pages)
