Bate: Public Value of the Humanities.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -150,10 +150,11 @@
         <a href="http://www.theguardian.com/higher-education-network/blog/2012/jan/11/defend-humanities-graduates">In Defence of the Humanities</a>,
         <i class="newspaper">The Guardian</i>, 11.01.2012.
       </li>
-      <li>Bate, Jonathan:
+      <li>Bate, Jonathan (editor):
         <i class="booktitle">The Public Value of the Humanities</i>.
         Bloomsbury, 2011. 
-        <a href="http://www.bloomsbury.com/uk/the-public-value-of-the-humanities-9781849660631/"><abbr>ISBN</abbr> 9781849660631</a>.
+        <a href="http://www.bloomsbury.com/uk/the-public-value-of-the-humanities-9781849660624/"><abbr>ISBN</abbr> 9781849660624</a>.
+        <br />Contains contributions by academics that each focus on a specific discipline in the humanities.
       </li>
       <li>Small, Helen:
         <i class="booktitle">The Value of the Humanities</i>.
