--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -943,7 +943,8 @@
         <a href="https://en.wikipedia.org/wiki/Abd_el-Ouahed_ben_Messaoud">Abd el-Ouahed ben Messaoud</a> 
         (his arrival in London may have influenced the play
         <a href="https://en.wikipedia.org/wiki/Lust%27s_Dominion">Lust's Dominion</a>),
-        <a href="https://en.wikipedia.org/wiki/Anglo-Moroccan_alliance">Anglo-Moroccan alliance</a>.
+        <a href="https://en.wikipedia.org/wiki/Anglo-Moroccan_alliance">Anglo-Moroccan alliance</a>,
+        <a href="https://en.wikipedia.org/wiki/William_Harborne">William Harborne (c.1542–1617)</a>.
       </li>
       <li>Brotton, Jerry: 
         <i class="booktitle">The Sultan and the Queen: The Untold Story of Queen Elizabeth and Islam</i>.
