Kuriyama's Marlowe book.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -977,6 +977,11 @@
         Cambridge University Press, 2004.
         <a href="http://www.cambridge.org/us/academic/subjects/literature/renaissance-and-early-modern-literature/cambridge-companion-christopher-marlowe?format=PB"><abbr>ISBN</abbr> 9780521527347</a>.
       </li>
+      <li>Kuriyama, Constance Brown:
+        <i class="booktitle">Christopher Marlowe: A Renaissance Life</i>.
+        Cornell University Press, 2010 (280 pages)
+        <a href="http://www.cornellpress.cornell.edu/book/?GCOI=80140100600750"><abbr>ISBN</abbr> 978-0-8014-7688-4</a>.
+      </li>
       <!-- 
       <li>:
         <i class="booktitle"></i>.
