Sorted by topic.

--- a/lijst.html
+++ b/lijst.html
@@ -51,7 +51,14 @@
   </nav>
 
   <main>
+
+  <h2>Science and Philosophy</h2>
   <ul>
+    <li>Parkin, Alan J.: 
+      <strong><i class="booktitle">Essential Cognitive Psychology</i></strong>. 
+      [2001] Routlege, 2014.
+      <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.
+    </li>
     <li>Booth, Wayne C.; Colomb, Gregory C.; Williams, Joseph M.: 
       <i class="booktitle">The Craft of Research</i>.
       4th edition. University of Chicago Press, 2016.
@@ -59,51 +66,9 @@
       (3rd edition. University of Chicago Press, 2008.
       <abbr>ISBN</abbr> 978 02 26 06 56 63. (? 18 €))
     </li>
-    <li>Polanyi, Karl: 
-      <strong><i class="booktitle">The Great Transformation: The Political and Economic Origins of Our Time</i></strong>. 
-      Beacon Press, 2001.
-      <a href="http://www.beacon.org/The-Great-Transformation-P46.aspx"><abbr>ISBN</abbr> 978-080705643-1</a>.
-    </li>
-    <li>Parkin, Alan J.: 
-      <strong><i class="booktitle">Essential Cognitive Psychology</i></strong>. 
-      [2001] Routlege, 2014.
-      <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.
-    </li>
     <li>Weston, Anthony: <i class="booktitle">A Rulebook for Arguments</i>.
       4th edition. Hackett Publishing, 2008.
       <a href="https://www.hackettpublishing.com/a-rulebook-for-arguments"><abbr>ISBN</abbr> 978-0-87220-954-1</a>. (? 12 €)
-    </li>
-    <li>Keynes, John Maynard: <i class="booktitle">The Essential Keynes</i>.
-      Edited by Robert Skidelsky. Penguin Classics. Penguin 2016. (592 pages)
-      <a href="http://www.penguinrandomhouse.com/books/317960/the-essential-keynes-by-john-maynard-keynes-edited-and-with-an-introduction-and-commentary-by-robert-skidelsky/"><abbr>ISBN</abbr>  9781846148132</a>.
-    </li>
-    <li>Skidelsky, Robert: <i class="booktitle">John Maynard Keynes: 1883-1946: Economost, Philosopher, Statesman</i>.
-      Penguin, 2005, 2013. (1056 pages)
-      <a href="http://www.penguinrandomhouse.com/books/321570/john-maynard-keynes-by-robert-skidelsky/"><abbr>ISBN</abbr> 9780143036159</a>.
-    </li>
-    <li>Varoufakis, Yanis: <i class="booktitle">The Global Minotaur</i>.
-      Zed Books, 2011. 3nd edition, 2015.
-      <a href="https://www.zedbooks.net/shop/book/the-global-minotaur/"><abbr>ISBN</abbr> 9781783606108</a>.
-    </li>
-    <!-- 
-      * ! Christian Felber: Change Everything: Creating an Economy for the Common Good. Zed Books: https://www.zedbooks.net/shop/book/change-everything/ 
-      * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/ 
-      * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
-      * Eric Hazan and Kamo: First Measures of the Coming Insurrection. Zed Books: https://www.zedbooks.net/shop/book/first-measures-of-the-coming-insurrection/ 
-      * Aidan Ricketts: The Activists' Handbook: A Step-by-Step Guide to Participatory Democracy. Zed Books: https://www.zedbooks.net/shop/book/the-activists-handbook/ 
-      * Anna Feigenbaum, Fabian Frenzel, and Patrick McCurdy: Protest Camps. Zed Books: https://www.zedbooks.net/shop/book/protest-camps/ 
-      * William Blum: America's Deadliest Export: Democracy – The Truth about US Foreign Policy and Everything Else. Zed Books: https://www.zedbooks.net/shop/book/americas-deadliest-export/
-        [possible follow up to Naomi Klein's "The Shock Doctrine"]
-      * Roger Burbach, Michael Fox, and Federico Fuentes: Latin America's Turbulent Transitions: The Future of Twenty-First Century Socialism. Zed Books: https://www.zedbooks.net/shop/book/latin-americas-turbulent-transitions/ 
-    -->
-    <li lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
-      Flammarion, 2017.
-      <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=50454&levelCode=home"><abbr>ISBN</abbr> 9782081395602</a>.
-    </li>
-    <li lang="fr">Zucman, Gabriel: <i class="booktitle">La Richesse cachée des nations. Enquête sur les paradis fiscaux</i>.
-      Seuil, 2013. (128 pages)
-      <a href="http://www.seuil.com/ouvrage/la-richesse-cachee-des-nations-gabriel-zucman/9782021114317"><abbr>ISBN</abbr> 9782021114317</a>.
-      <span lang="en">(<a href="http://gabriel-zucman.eu/richesse-cachee/" hreflang="fr">Author's website</a>.)</span>
     </li>
     <li lang="nl">Beeckman, Tinneke: <i class="booktitle">Door Spinoza's lens</i>.
       Kalmthout: Pelckmans, 2012.
@@ -149,15 +114,6 @@
       <strong><i class="booktitle">An Enquiry concerning Human Understanding</i></strong>.
       Edited by Tom L. Beauchamp. Oxford University Press, 1999. (304 pages)
       <a href="https://global.oup.com/academic/product/an-enquiry-concerning-human-understanding-9780198752486"><abbr>ISBN</abbr> 978-0-19-875248-6</a>. (? 25 €)
-    </li>
-    <li>Koestler, Arthur: <i class="booktitle">The Sleepwalkers: A History of Man's Changing Vision of the Universe</i>. 
-      Penguin, 1990, 2014. (624 pages)
-      <abbr>ISBN</abbr> 978-0141394534 / 
-      <a href="http://www.penguinrandomhouse.com/books/274204/the-sleepwalkers-by-arthur-koestler/"><abbr>ISBN</abbr> 978-0140192469</a>. (? 19 €)
-    </li>
-    <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: </i>. 
-      2nd edition. University of Chicago Press, 2008. (480 pages)
-      <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo5550077.html"><abbr>ISBN</abbr> 9780226482057</a>. (? 21 €)
     </li>
     <li>Locke, John: <i class="booktitle">An Essay concerning Human Understanding</i>. 
       Edited by Pauline Phemister. Oxford University Press, 2008. (576 pages)
@@ -226,46 +182,80 @@
       Routledge, 2017. (312 pages)
       <a href="https://www.routledge.com/From-the-Laboratory-to-the-Classroom-Translating-Science-of-Learning-for/Horvath-Lodge-Hattie/p/book/9781138649644"><abbr>ISBN</abbr> 9781138649644</a>.
     </li>
+    <li>Magee, Bryan: <i class="booktitle">Confessions of a Philosopher: A Personal Journey Through Western Philosophy from Plato to Popper</i>.
+      Modern Library, 1999.
+      <a href="http://www.penguinrandomhouse.com/books/106036/confessions-of-a-philosopher-by-bryan-magee/"><abbr>ISBN</abbr> 978-03 75 75 03 66</a>. (? 18 €)
+    </li>
+    <li>Abraham, Tara H.: <i class="booktitle">Rebel Genius: Warren S. McCulloch's Transdisciplinary Life in Science</i>.
+      <abbr>MIT</abbr>, 2016.
+      <a href="https://mitpress.mit.edu/books/rebel-genius"><abbr>ISBN</abbr> 9780262035095</a>.
+    </li>
+  </ul>
+
+  <h2>History</h2>
+  <ul>
+    <li>Polanyi, Karl: 
+      <strong><i class="booktitle">The Great Transformation: The Political and Economic Origins of Our Time</i></strong>. 
+      Beacon Press, 2001.
+      <a href="http://www.beacon.org/The-Great-Transformation-P46.aspx"><abbr>ISBN</abbr> 978-080705643-1</a>.
+    </li>
+    <li>Koestler, Arthur: <i class="booktitle">The Sleepwalkers: A History of Man's Changing Vision of the Universe</i>. 
+      Penguin, 1990, 2014. (624 pages)
+      <abbr>ISBN</abbr> 978-0141394534 / 
+      <a href="http://www.penguinrandomhouse.com/books/274204/the-sleepwalkers-by-arthur-koestler/"><abbr>ISBN</abbr> 978-0140192469</a>. (? 19 €)
+    </li>
+    <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: </i>. 
+      2nd edition. University of Chicago Press, 2008. (480 pages)
+      <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo5550077.html"><abbr>ISBN</abbr> 9780226482057</a>. (? 21 €)
+    </li>
+  </ul>
+
+  <h2>Economics and Politics</h2>
+  <ul>
+    <li>Keynes, John Maynard: <i class="booktitle">The Essential Keynes</i>.
+      Edited by Robert Skidelsky. Penguin Classics. Penguin 2016. (592 pages)
+      <a href="http://www.penguinrandomhouse.com/books/317960/the-essential-keynes-by-john-maynard-keynes-edited-and-with-an-introduction-and-commentary-by-robert-skidelsky/"><abbr>ISBN</abbr>  9781846148132</a>.
+    </li>
+    <li>Skidelsky, Robert: <i class="booktitle">John Maynard Keynes: 1883-1946: Economost, Philosopher, Statesman</i>.
+      Penguin, 2005, 2013. (1056 pages)
+      <a href="http://www.penguinrandomhouse.com/books/321570/john-maynard-keynes-by-robert-skidelsky/"><abbr>ISBN</abbr> 9780143036159</a>.
+    </li>
+    <li>Varoufakis, Yanis: <i class="booktitle">The Global Minotaur</i>.
+      Zed Books, 2011. 3nd edition, 2015.
+      <a href="https://www.zedbooks.net/shop/book/the-global-minotaur/"><abbr>ISBN</abbr> 9781783606108</a>.
+    </li>
+    <!-- 
+      * ! Christian Felber: Change Everything: Creating an Economy for the Common Good. Zed Books: https://www.zedbooks.net/shop/book/change-everything/ 
+      * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/ 
+      * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
+      * Eric Hazan and Kamo: First Measures of the Coming Insurrection. Zed Books: https://www.zedbooks.net/shop/book/first-measures-of-the-coming-insurrection/ 
+      * Aidan Ricketts: The Activists' Handbook: A Step-by-Step Guide to Participatory Democracy. Zed Books: https://www.zedbooks.net/shop/book/the-activists-handbook/ 
+      * Anna Feigenbaum, Fabian Frenzel, and Patrick McCurdy: Protest Camps. Zed Books: https://www.zedbooks.net/shop/book/protest-camps/ 
+      * William Blum: America's Deadliest Export: Democracy – The Truth about US Foreign Policy and Everything Else. Zed Books: https://www.zedbooks.net/shop/book/americas-deadliest-export/
+        [possible follow up to Naomi Klein's "The Shock Doctrine"]
+      * Roger Burbach, Michael Fox, and Federico Fuentes: Latin America's Turbulent Transitions: The Future of Twenty-First Century Socialism. Zed Books: https://www.zedbooks.net/shop/book/latin-americas-turbulent-transitions/ 
+    -->
+    <li lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
+      Flammarion, 2017.
+      <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=50454&levelCode=home"><abbr>ISBN</abbr> 9782081395602</a>.
+    </li>
+    <li lang="fr">Zucman, Gabriel: <i class="booktitle">La Richesse cachée des nations. Enquête sur les paradis fiscaux</i>.
+      Seuil, 2013. (128 pages)
+      <a href="http://www.seuil.com/ouvrage/la-richesse-cachee-des-nations-gabriel-zucman/9782021114317"><abbr>ISBN</abbr> 9782021114317</a>.
+      <span lang="en">(<a href="http://gabriel-zucman.eu/richesse-cachee/" hreflang="fr">Author's website</a>.)</span>
+    </li>
     <li lang="fr">Saporta, Isabelle: <i class="booktitle">Le livre noir de l'agriculture</i>.
       Fayard, 2011. (252 pages)
       <a href="http://www.fayard.fr/le-livre-noir-de-lagriculture-9782213656038"><abbr>ISBN</abbr> 9782213656038</a>.
       <!-- reprint Pluriel, 2012: http://www.fayard.fr/le-livre-noir-de-lagriculture-9782818502242  -->
     </li>
-    <li>Magee, Bryan: <i class="booktitle">Confessions of a Philosopher: A Personal Journey Through Western Philosophy from Plato to Popper</i>.
-      Modern Library, 1999.
-      <a href="http://www.penguinrandomhouse.com/books/106036/confessions-of-a-philosopher-by-bryan-magee/"><abbr>ISBN</abbr> 978-03 75 75 03 66</a>. (? 18 €)
-    </li>
-    <li>Bauer, Johannes: <i class="booktitle">Programming Smalltalk – Object-Orientation from the Beginning</i>.
-      Springer, 2015. 
-      <a href="http://www.springer.com/us/book/9783658068226"><abbr>ISBN</abbr> 978-3-658-06822-6</a>.
-      <!-- @@sample pages on SpringerLink -->
-    </li>
-    <li>Bowker, Geoffrey C.; Star, Susan Leigh: 
-      <strong><i class="booktitle">Sorting Things Out: Classification and Its Consequences</i></strong>.
-      <abbr>MIT</abbr> Press, 1999.
-      <a href="https://mitpress.mit.edu/books/sorting-things-out"><abbr>ISBN</abbr> 9780262522953</a>.
-    </li>
-    <li>Bowker, Geoffrey C.; Timmermans, Stefan; Clarke, Adele C.; Balka, Ellen, eds.: 
-      <i class="booktitle">Boundary Objects and Beyond: Working with Leigh Star</i>. 
-      <abbr>MIT</abbr> Press, 2016.
-      <a href="https://mitpress.mit.edu/books/boundary-objects-and-beyond"><abbr>ISBN</abbr> 9780262528085</a>.
-      <!-- See https://en.wikipedia.org/wiki/Boundary_object -->
-    </li>
-    <li>Bowker, Geoffrey C.: <i class="booktitle">Memory Practices in the Sciences</i>. 
-      <abbr>MIT</abbr> Press, 2006.
-      <a href="https://mitpress.mit.edu/books/memory-practices-sciences"><abbr>ISBN</abbr> 9780262524896</a>.
-    </li>
-    <li>Aslan, Reza: <i class="booktitle">No god but God: The Origins and Evolution of Islam</i>. 
-      Random House, 2012.
-      <a href="http://www.penguinrandomhouse.com/books/203718/no-god-but-god-the-origins-and-evolution-of-islam-by-reza-aslan/"><abbr>ISBN</abbr> 9780385739764</a>.
-    </li>
+  </ul>
+
+  <h2>Literature</h2>
+  <ul>
     <li>Ovid: <i class="booktitle">Metamorphoses</i>. Translated by Arthur Golding. Edited by Madeleine Forey. Penguin Classics. 
       Penguin, 2002. (576 pages)
       <a href="https://www.penguin.co.uk/books/33717/the-metamorphoses/9780140422306/"><abbr>ISBN</abbr> 978-0140422306</a>.
-    </li>
-    <li>Abraham, Tara H.: <i class="booktitle">Rebel Genius: Warren S. McCulloch's Transdisciplinary Life in Science</i>.
-      <abbr>MIT</abbr>, 2016.
-      <a href="https://mitpress.mit.edu/books/rebel-genius"><abbr>ISBN</abbr> 9780262035095</a>.
     </li>
     <li>Craig, Hugh; Kinney, Arthur F. (editors): <i class="booktitle">Shakespeare, Computers, and the Mystery of Authorship</i>.
       Cambridge University Press, 2012.
@@ -305,6 +295,33 @@
     <li>Foxe, John; King, John N. (editor): <i class="booktitle">Foxe's Book of Martyrs: Select Narratives</i>. 
       Oxford University Press, 2009. (400 pages)
       <a href="https://global.oup.com/academic/product/foxes-book-of-martyrs-9780199236848"><abbr>ISBN</abbr> 9780199236848</a>.
+    </li>
+  </ul>
+
+  <ul>
+    <li>Bauer, Johannes: <i class="booktitle">Programming Smalltalk – Object-Orientation from the Beginning</i>.
+      Springer, 2015. 
+      <a href="http://www.springer.com/us/book/9783658068226"><abbr>ISBN</abbr> 978-3-658-06822-6</a>.
+      <!-- @@sample pages on SpringerLink -->
+    </li>
+    <li>Bowker, Geoffrey C.; Star, Susan Leigh: 
+      <strong><i class="booktitle">Sorting Things Out: Classification and Its Consequences</i></strong>.
+      <abbr>MIT</abbr> Press, 1999.
+      <a href="https://mitpress.mit.edu/books/sorting-things-out"><abbr>ISBN</abbr> 9780262522953</a>.
+    </li>
+    <li>Bowker, Geoffrey C.; Timmermans, Stefan; Clarke, Adele C.; Balka, Ellen, eds.: 
+      <i class="booktitle">Boundary Objects and Beyond: Working with Leigh Star</i>. 
+      <abbr>MIT</abbr> Press, 2016.
+      <a href="https://mitpress.mit.edu/books/boundary-objects-and-beyond"><abbr>ISBN</abbr> 9780262528085</a>.
+      <!-- See https://en.wikipedia.org/wiki/Boundary_object -->
+    </li>
+    <li>Bowker, Geoffrey C.: <i class="booktitle">Memory Practices in the Sciences</i>. 
+      <abbr>MIT</abbr> Press, 2006.
+      <a href="https://mitpress.mit.edu/books/memory-practices-sciences"><abbr>ISBN</abbr> 9780262524896</a>.
+    </li>
+    <li>Aslan, Reza: <i class="booktitle">No god but God: The Origins and Evolution of Islam</i>. 
+      Random House, 2012.
+      <a href="http://www.penguinrandomhouse.com/books/203718/no-god-but-god-the-origins-and-evolution-of-islam-by-reza-aslan/"><abbr>ISBN</abbr> 9780385739764</a>.
     </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
