--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1165,6 +1165,9 @@
             <a href="http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/ockhams-razors-users-manual?format=PB"><abbr>ISBN</abbr> 9781107692534</a>.
             <!-- @@check excerpt -->
           </li>
+          <li><a href="https://en.wikipedia.org/wiki/Morgan%27s_Canon">Morgan's Canon</a>,
+            a specific case of the principle of parsimony.
+          </li>
         </ul>
       </li>
       <!-- Several philosophy-related playlists on the channel of
