Philosophy of Science Assocation.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -581,7 +581,8 @@
         <a href="http://journal.philsci.org/" class="journal">Philosophy of Science</a>
         is the official journal of the 
         <a href="http://philsci.org/">Philosophy of Science Association</a>.
-        (It is <a href="http://www.press.uchicago.edu/ucp/journals/journal/phos.html">published by The University of Chicago Press</a>.)
+        Non-subscribers can buy single issues as e-book.
+        <br />(The journal is <a href="http://www.journals.uchicago.edu/toc/phos/current">published by The University of Chicago Press</a>.)
       </li>
       <li><a href="http://undsci.berkeley.edu/article/philosophy">The philosophy of science</a>
         by the <i>Understanding Science</i> project, is a short article that explains what
