--- a/lijst.html
+++ b/lijst.html
@@ -296,8 +296,19 @@
       Oxford University Press, 2009. (400 pages)
       <a href="https://global.oup.com/academic/product/foxes-book-of-martyrs-9780199236848"><abbr>ISBN</abbr> 9780199236848</a>.
     </li>
+    <li>Middleton, Thomas:
+      <i class="booktitle">The Collected Works</i>, edited by Gary Taylor and John Lavagnino.
+      Oxford University Press, 2010. (2016 pages)
+      <a href="https://global.oup.com/academic/product/thomas-middleton-the-collected-works-9780199580538"><abbr>ISBN</abbr> 9780199580538</a>.
+    </li>
+    <li>Machiavelli, Niccolò:
+      <i class="booktitle">The Prince</i>. ranslated by Peter Bondanella and Edited by Maurizio Viroli.
+      Oxford University Press, 2008.
+      <a href="https://global.oup.com/academic/product/the-prince-9780199535699"><abbr>ISBN</abbr> 9780199535699</a>.
+    </li>
   </ul>
 
+  <h2>Various Other Topics</h2>
   <ul>
     <li>Bauer, Johannes: <i class="booktitle">Programming Smalltalk – Object-Orientation from the Beginning</i>.
       Springer, 2015. 
@@ -322,6 +333,10 @@
     <li>Aslan, Reza: <i class="booktitle">No god but God: The Origins and Evolution of Islam</i>. 
       Random House, 2012.
       <a href="http://www.penguinrandomhouse.com/books/203718/no-god-but-god-the-origins-and-evolution-of-islam-by-reza-aslan/"><abbr>ISBN</abbr> 9780385739764</a>.
+    </li>
+    <li>Radford, Andrew: <i class="booktitle">An Introduction to English Sentence Structure</i>.
+      Cambridge University Press, 2009. (456 pages)
+      <a href="http://www.cambridge.org/gb/academic/subjects/languages-linguistics/grammar-and-syntax/introduction-english-sentence-structure?format=PB"><abbr>ISBN</abbr> 9780521731904</a>.
     </li>
     <!-- 
     <li> : <i class="booktitle"></i>. 
