--- a/humanities/index.html
+++ b/humanities/index.html
@@ -311,6 +311,31 @@
       </li>
     </ul>
 
+    <h2>Literature and Literary Theory</h2>
+    <ul>
+      <li>
+        <a href="http://litguide.press.jhu.edu/index.html">The Johns Hopkins Guide to Literary Theory and Criticism</a>
+        is a reference work with entries on literary critics and theorists, critical schools and movements, etcetera.
+        Access requires a
+        <a href="http://litguide.press.jhu.edu/about/plans_and_pricing.html">paid subscription</a>.
+      </li>
+      <li>
+        <a href="http://www.kristisiegel.com/">Dr. Kristi Siegel's website</a>:
+        Kristi Siegel is professor of English at Mount Mary University (Milwaukee, Wisconsin).
+        Her website contains online syllabi and resources for students and teachers,
+        including an
+        <a href="http://www.kristisiegel.com/theory.htm">Introduction to Modern Literary Theory</a>.
+      </li>
+      <li>Chandler, Daniel: 
+        <a href="http://visual-memory.co.uk/daniel/Documents/S4B/semiotic.html">Semiotics for Beginners</a>.
+        <!-- https://duckduckgo.com/?q=chandler+%22semiotics+for+beginners%22&ia=web -->
+      </li>
+      <li>Miall, David S.; Kuiken, Don (University of Alberta):
+        <a href="https://sites.ualberta.ca/~dmiall/reading/readingm.htm">Reader Response Research: Empirical research on literary reading</a>.
+      </li>
+    </ul>
+
+
     <h2 id="got">Pop Culture: Game of Thrones</h2>
     <ul>
       <li><abbr>PBS</abbr> NewsHour:
