Veritassium: Is Most Published Research Wrong?

--- a/science/index.html
+++ b/science/index.html
@@ -597,6 +597,10 @@
         for example because they cannot be replicated, because data are missing or have been faked
         or other serious flaws.
       </li>
+      <li>Veritassium:
+        <a href="https://www.youtube.com/watch?v=42QuXLucH3Q">Is Most Published Research Wrong?</a>
+        (YouTube, 13 minutes, August 2016).<!-- @@rewatch -->
+      </li>
     </ul>
     <!-- Publication bias:
       * Bite Size Psych: "Is the number 1 fact about willpower wrong?": https://www.youtube.com/watch?v=gnSBnQo9-UM 
@@ -607,7 +611,7 @@
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
     <!-- We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
       Bo Eason even claims that a Harvard professor said (2'40'' - 3'04''): "The average human being uses 5% of their brain capacity. High achievers use 20% of their brain capacity. Olympic gold medalists use 40% of their brain capacity, because mastery is the highest form of intelligence."
-      
+
       Debunked at: 
       * Association for Psychological Science: "Most People Use Only 10% of Their Brain Power": http://www.psychologicalscience.org/media/myths/myth_1.cfm (no date).
         From 50 Great Myths of Popular Psychology: Shattering Widespread Misconceptions about Human Behavior by Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, and Barry L. Beyerstein. Copyright © 2010 by Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, and Barry L. Beyerstein.  This material is reproduced with permission of John Wiley & Sons, Inc.
